@@ -107,6 +107,7 @@
 	* Fixed an issue with initializeWithEmptyQuery not issueing the empty query
 	* Added feature #39080: Add ping time in status report
 	* Changed garbage collection handling, some simplification with cleaning the index
+	* Fixed issue #39037: Recordmonitor should respect additionalWhereClause setting in indexing queue, credits Jigal van Hemert 
 
 2012-07-20  Stefan Sprenger  <stefan.sprenger@dkd.de>
 
